feat: Add translation to the AbbBar, Update [StyledLink] props

--- a/src/app/i18n/locales/ar/translation.json
+++ b/src/app/i18n/locales/ar/translation.json
@@ -2,5 +2,11 @@
   "title": "العنوان",
   "language": "اللغة",
   "arabic":"العربية",
-  "english":"الانكليزية"
+  "english":"الانكليزية",
+  "home":"البداية",
+  "about":"حول عملنا",
+  "products":"استعراض المنتجات",
+  "signin":"تسجيل الدخول",
+  "signout":"تسجيل الخروج",
+  "dashboard":"لوحة التحكم"
 }
