--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -1,12 +1,27 @@
 {
   "title": "Hi there!",
   "language": "Language",
-  "arabic":"Arabic",
-  "english":"English",
-  "home":"Home",
-  "about":"About",
-  "products":"Products",
-  "signin":"Sign in",
-  "signout":"Sign out",
-"dashboard":"Dashboard"
+  "arabic": "Arabic",
+  "english": "English",
+  "home": "Home",
+  "about": "About",
+  "products": "Products",
+  "signin": "Sign in",
+  "signout": "Sign out",
+  "dashboard": "Dashboard",
+  "home_page": {
+    "info1": "Some of the technologies and features included in this project:",
+    "info2": "Nextjs 14 with App Router",
+    "info3": "Route Groups, Dynamic Routes, Parallel Routes, Intercepting Routes, Route Handlers ...",
+    "fully_authentication": "Fully authentication which includes:",
+    "nextauth_provider": "Signin with NextAuth providers, credentials",
+    "activate_email": "Activating the account using a link sent via email",
+    "reset_pass": "Reset the forgotten password",
+    "responsive_design": "Fully Responsive Web Design using Tailwind CSS",
+    "user_dashboard": "User Dashboard",
+    "other_feat": "(Other features are still under construction)",
+    "test_credentials": "To test this web application without signing up, you can use the following credentials:",
+    "email": "Email",
+    "password": "Password"
+  }
 }
