feat: Add German language support

--- a/src/app/i18n/locales/ar/translation.json
+++ b/src/app/i18n/locales/ar/translation.json
@@ -3,6 +3,7 @@
   "language": "اللغة",
   "arabic": "العربية",
   "english": "الانكليزية",
+  "german": " الألمانية",
   "home": "البداية",
   "about": "حول عملنا",
   "products": "استعراض المنتجات",
@@ -13,6 +14,8 @@
     "info1": "بعض التقنيات والميزات المتضمنة في هذا المشروع:",
     "info2": "نستخدم Nextjs 14 with App Router",
     "info3": "كما تتضمن Route Groups, Dynamic Routes, Parallel Routes, Intercepting Routes, Route Handlers ...",
+    "multiple_themes":"دعم السمات dark, light",
+    "multiple_languages":"دعم لغات متعددة",
     "fully_authentication": "المصادقة الكاملة والتي تتضمن:",
     "nextauth_provider": "تسجيل الدخول باستخدام NextAuth-Providers، Credentials",
     "activate_email": "تفعيل الحساب باستخدام الرابط المرسل عبر البريد الإلكتروني",
