--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -3,6 +3,7 @@
   "language": "Language",
   "arabic": "Arabic",
   "english": "English",
+  "german": " German",
   "home": "Home",
   "about": "About",
   "products": "Products",
@@ -13,8 +14,10 @@
     "info1": "Some of the technologies and features included in this project:",
     "info2": "Nextjs 14 with App Router",
     "info3": "Route Groups, Dynamic Routes, Parallel Routes, Intercepting Routes, Route Handlers ...",
+    "multiple_themes":"Support dark and light themes",
+    "multiple_languages":"Support multiple languages",
     "fully_authentication": "Fully authentication which includes:",
-    "nextauth_provider": "Signin with NextAuth providers, credentials",
+    "nextauth_provider": "Signin with: NextAuth providers, credentials",
     "activate_email": "Activating the account using a link sent via email",
     "reset_pass": "Reset the forgotten password",
     "responsive_design": "Fully Responsive Web Design using Tailwind CSS",
